testsuite/tests/module/mod71.stderr

mod71.hs:4:9: error:
    • Found hole: _ :: t2
      Where: ‘t2’ is a rigid type variable bound by
               the inferred type of f :: Num t1 => (t2 -> t1 -> t3) -> t3
               at mod71.hs:4:1-11
    • In the first argument of ‘x’, namely ‘_’
      In the expression: x _ 1
      In an equation for ‘f’: f x = x _ 1
    • Relevant bindings include
        x :: t2 -> t1 -> t3 (bound at mod71.hs:4:3)
        f :: (t2 -> t1 -> t3) -> t3 (bound at mod71.hs:4:1)
      Constraints include Num t1 (from mod71.hs:4:1-11)
